# material-fatigue

./: .gitignore  CMakeLists.txt  DA.ipynb  EDA.ipynb  ElasticWaveOperator.cpp  ElasticWaveOperator.hpp  Environment.hpp  FatigueCalculator.cpp  FatigueCalculator.hpp  FatigueCoefficient.hpp  GenPlots.ipynb  Makefile  Readme.md  SigmaCoefficient.hpp  SigmaCoefficient2.hpp  gen_mesh.py  gen_mesh_old.py  plate_loading.cpp  plot_mesh.py  sm_test.cpp  РасчетЖ.docx
examples/: ex2.cpp
util/: adjust_mesh.cpp  gen_mesh.py  gen_mesh_hole_new.py  gen_mesh_hole_old.py  gen_mesh_random.cpp  gen_mesh_solid.py  get_max_min.py  plot_mesh.py
